--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,10 @@
     {% endif %}
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
+    <!-- Slick -->
+    <link rel="stylesheet" href="{{ "/styles/slick.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/styles/slick-theme.css" | prepend: site.baseurl }}">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/styles/style.css" | prepend: site.baseurl }}">
 
