fix fonts errors

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -68,7 +68,7 @@ $media-desktop-min: 1025px !default;
 @import "global/_type.scss";
 
 // Franklin Ghotic
-@import url(../fonts/franklin-ghotic/stylesheet.css);
+// @import url(../fonts/franklin-ghotic/stylesheet.css);
 
 // Prettyprint
 @import "global/_prettyprint-monokai.scss";
