move images to their appropriate places, store others in /images/unused

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,8 @@
         <img src="/images/bahk-logo-big-white.svg" alt="BAHK Logo">
       </a>
       <div class="burger">
-        <img class="open" src="\media\new\nav-burger.svg" alt="menu">
-        <img class="close" src="\media\new\nav-burger_close.svg" alt="close menu">
+        <img class="open" src="\images\nav-burger.svg" alt="menu">
+        <img class="close" src="\images\nav-burger_close.svg" alt="close menu">
       </div>
     </div>
 
@@ -19,35 +19,35 @@
           <p>About</p>
           <span>Learn more</span>
         </div>
-        <img src="\media\new\nav-about.svg" alt="About">
+        <img src="\images\nav-about.svg" alt="About">
       </a>
       <a href="/join/">
         <div class="text">
           <p>Members</p>
           <span>Join us</span>
         </div>
-        <img src="\media\new\nav-members.svg" alt="Join us">
+        <img src="\images\nav-members.svg" alt="Join us">
       </a>
       <a href="/committees/">
         <div class="text">
           <p>Committees</p>
           <span>Lead</span>
         </div>
-        <img src="\media\new\nav-committees.svg" alt="Committees">
+        <img src="\images\nav-committees.svg" alt="Committees">
       </a>
       <a href="/meetups/">
         <div class="text">
           <p>Events</p>
           <span>Come</span>
         </div>
-        <img src="\media\new\nav-events.svg" alt="Events">
+        <img src="\images\nav-events.svg" alt="Events">
       </a>
       <a href="/contact/">
         <div class="text">
           <p>Contact us</p>
           <span>Follow</span>
         </div>
-        <img src="\media\new\nav-contact.svg" alt="Contact">
+        <img src="\images\nav-contact.svg" alt="Contact">
       </a>
     </nav>
   </div>
