replace form logic with numpad.js

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -104,3 +104,4 @@
 <script src="/scripts/site.js"></script>
 <script src="/scripts/slick.min.js"></script>
 <script src="/scripts/new.js"></script>
+<script src="/scripts/numpad.js"></script>
