--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,8 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/styles/style.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/styles/numpad.css" | prepend: site.baseurl }}">
+
 
     <style>
     a, .text-accent, .dotted-link, p a, article a { color: {{ site.accent }}; }
