initial change to join and navigation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,12 +28,12 @@
         </div>
         <img src="\images\nav-members.svg" alt="Join us">
       </a>
-      <a href="/committees/">
+      <a href="/resources/">
         <div class="text">
-          <p>Committees</p>
-          <span>Lead</span>
+          <p>Resources</p>
+          <span>Serve & Lead</span>
         </div>
-        <img src="\images\nav-committees.svg" alt="Committees">
+        <img src="\images\nav-committees.svg" alt="Resources">
       </a>
       <a href="/meetups/">
         <div class="text">
