add link to external blog

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,10 +14,10 @@
     </div>
 
     <nav>
-      <a href="/about/">
+      <a href="https://blog.bitcoin.org.hk/">
         <div class="text">
-          <p>About</p>
-          <span>Learn more</span>
+          <p>Bitcoin Bytes</p>
+          <span>Blog</span>
         </div>
         <img src="\images\nav-about.svg" alt="About">
       </a>
@@ -31,7 +31,7 @@
       <a href="/resources/">
         <div class="text">
           <p>Resources</p>
-          <span>Serve & Lead</span>
+          <span>Lead</span>
         </div>
         <img src="\images\nav-committees.svg" alt="Resources">
       </a>
