add formatting for comms, update footer to be LN donate link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -84,8 +84,8 @@
         </div>
        
         <div class="links">
+          <a href="/lightning">Donate: ⚡️Lightning⚡️</a>
           <a href="/about">Learn more</a>
-          <a href="/contact">Contact us</a>
         </div>
       </div>
       <img src="/images/site-logo.png" alt="BAHK Logo">
