--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1564,7 +1564,7 @@ footer {
   }
 
   // Committees [page]
-  .committees {
+  .resources {
     a.nbtn {
       font-weight: 500;
       font-size: 18px;
