add lightning address to head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,4 +50,8 @@
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(wf, s);
   })(); </script>
+  
+   <!-- Lightning address for Alby -->
+  <meta name="lightning" content="lnurlp:donate@bitcoin.org.hk"/>
+  <meta property="og:image" content="/media/press/bahk-logo-big-256x256.png" />
 </head>
