--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -97,7 +97,7 @@
 <div class="footnote">
   <div class="c">
     <a class="to-the-moon right" href="#top"><i class="icon-pointer-up"></i> Back to Top</a>
-    <p>Made by <i title="collaborating brains" class="icon-collab"></i> in Hong Kong • Contains beautiful <a href="https://nametiles.co">Nametiles</a> • <a href="https://github.com/{{ site.github }}/" target="_blank"><i class="icon-github"></i> Fork</a> • <a href="http://prose.io/#{{ site.github }}" target="_blank"><i class="icon-pencil"></i> Edit in Prose</a>.</p>
+    <p>Made by <i title="collaborating brains" class="icon-collab"></i> in Hong Kong • <a href="https://github.com/{{ site.github }}/" target="_blank"><i class="icon-github"></i> Fork</a> • <a href="http://prose.io/#{{ site.github }}" target="_blank"><i class="icon-pencil"></i> Edit in Prose</a>.</p>
   </div>
 </div>
 
